[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_prime = "*"
rand = "*"
num-bigint = { version = "*", features = ["rand"] }
num-traits = "*"
lazy_static = "*"
num-integer = "*"
